# adsb-pubsub-feeder

./: .gitignore  LICENSE  README.md  app.toml  pyproject.toml
docs/semantic-catalog/: health-history-log.yaml  pubsub-sbs-message.yaml
src/ads_b/: main.py
src/ads_b/config/: config_model.py  load_config.py  read_credentials_path.py  require_pubsub_location.py
src/ads_b/health/: build_health_history_record.py  feeder_stats.py  safe_write_health_file.py  write_health_file.py  write_health_history_record.py
src/ads_b/lifecycle/: bytes_per_megabyte.py  configure_health_history_logging.py  configure_logging.py  install_shutdown_handlers.py  log_startup_banner.py  run_feeder.py  shutdown_flag.py
src/ads_b/network/: apply_keepalive.py  close_socket.py  connect_with_backoff.py  feed_idle_error.py  open_socket.py  read_sbs_lines.py  sleep_until_stop.py
src/ads_b/observability/: throttled_logger.py
src/ads_b/publish/: drain_futures.py  publish_line.py  publish_line_like.py  publisher_like.py  reconcile_futures.py  reconcile_result.py
src/ads_b/reporting/: format_health_table.py  read_health_history.py  report_health_history.py  report_health_history_cli.py  rollup_health_history.py  write_health_history_chart.py  write_health_history_csv.py
tests/ads_b/: test_main.py
tests/ads_b/config/: test_load_config.py  test_read_credentials_path.py  test_require_pubsub_location.py
tests/ads_b/health/: test_build_health_history_record.py  test_feeder_stats.py  test_safe_write_health_file.py  test_write_health_file.py  test_write_health_history_record.py
(+22 files in other folders)
